--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     font-family: "Kumbh Sans", sans-serif;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 footer{
@@ -101,7 +101,7 @@ footer a{
 .list-description{
     border-bottom:solid thin hsl(240,5%,91%);
     color:hsl(240,6%,50%);
-    display: none;
+    display:block;
     padding-bottom: 1rem;
     font-size: 1.1rem;
 }
