--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,6 @@
     text-decoration: none;
   }
   
-  /* top image in mobiles */
   /* .top-image {
     width: 266px;
     height: 196px;
@@ -53,8 +52,8 @@
     background-repeat: no-repeat;
     background-position: center, bottom center;
     position: absolute;
-  }
-   */
+  } */
+   
   /* main container */
   .container {
     margin: calc(50px + (196px / 2)) auto 0 auto;
@@ -68,7 +67,7 @@
   /* content */
   .content {
     margin: auto;
-    padding: 2rem;
+    /* padding: 2rem; */
   }
   
   .content__title {
@@ -93,7 +92,7 @@
     flex-wrap: nowrap;
     color: hsl(237, 12%, 33%);
     font-size: 1.1rem;
-    font-weight: bold;
+    /* font-weight: bold; */
   }
   
   .list__word * {
@@ -106,9 +105,10 @@
     border: none;
   }
   
-  /* .list__word:hover {
-    color: hsl(14, 88%, 65%);
-  } */
+  .list__word:hover {
+    /* color: hsl(14, 88%, 65%); */
+    font-weight: bold;
+  }
   
   .list__description {
     border-bottom: solid thin hsl(240, 5%, 91%);
@@ -136,9 +136,9 @@
     margin-left: 1rem;
   }
   
-  .flip-vertically {
+  /* .flip-vertically {
     transform: scaleY(-1);
-  }
+  } */
   
   /* desktop style */
   @media (min-width: 768px) {
@@ -153,7 +153,7 @@
       background-position: calc(-472px / 7) center,
         calc(-966px / 1.735) calc(-945px / 3);
       overflow: hidden;
-      max-width: 900px;
+      /* max-width: 900px; */
     }
   
     /* content */
@@ -163,7 +163,9 @@
       margin: 0 0 0 auto;
       background-color: rgba(255, 255, 255, 0.8);
       height: 100%;
-      padding: 6rem 5rem;
+      /* padding: 6rem 5rem; */
+      padding-top: 2rem;
+      padding-right:2rem;
     }
   
     .content__title {
@@ -171,14 +173,18 @@
       font-size: 2.5rem;
     }
   
-    /* left side image
+    /* left side image*/
     .top-image {
-      width: 266px;
-      height: 196px;
-      background-image: url("../images/illustration-woman-online-mobile.svg"),
-      url("../images/bg-pattern-mobile.svg");
-    background-repeat: no-repeat;
-    background-position: center, bottom center;
-    position: absolute;
-    } */
+      width: 90px;
+      height: 90px;
+      background: url("../images/illustration-box-desktop.svg");
+    /* background-repeat: no-repeat; */
+      background-position:center;
+      background-size:cover;
+      position: absolute;
+      left:10;
+      top:60%;
+      transform:translate(0,-50%);
+      
+    } 
   }
